--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -14,6 +14,45 @@
         border-block: 1px solid var(--color-neutral-200);
         background-color: var(--color-neutral-50);
         color: var(--color-neutral-500);
+
+        &.sortable {
+          cursor: pointer;
+          user-select: none;
+          transition: color 0.15s ease-in-out;
+
+          &::after {
+            content: "";
+            display: inline-block;
+            width: 0;
+            height: 0;
+            margin-left: 0.5em;
+            vertical-align: middle;
+            border-left: 4px solid transparent;
+            border-right: 4px solid transparent;
+            opacity: 0;
+            transition: opacity 0.15s ease-in-out;
+          }
+
+          &:hover {
+            color: var(--color-neutral-700);
+          }
+
+          &.is-active {
+            color: var(--color-neutral-700);
+
+            &::after {
+              opacity: 1;
+            }
+
+            &[data-dir="ASC"]::after {
+              border-bottom: 5px solid currentColor;
+            }
+
+            &[data-dir="DESC"]::after {
+              border-top: 5px solid currentColor;
+            }
+          }
+        }
     }
 
     & td {
