--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -1,11 +1,18 @@
 @layer components {
   .button {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.25rem;
     border: 1px solid transparent;
     border-radius: 0.25em;
     cursor: pointer;
     font-weight: 600;
     font-size: 14px;
     white-space: nowrap;
+
+    & svg {
+      opacity: 0.5;
+    }
 
     &.is-rounded {
       border-radius: 9999px;
