--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,10 +1,9 @@
 @layer components {
-  label {
+  .label {
     display: block;
     font-size: 14px;
     font-weight: 500;
     color: var(--color-neutral-700);
-    margin-bottom: 1rem;
 
     & input {
       margin-top: 0.375rem;
