--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -1,6 +1,47 @@
 @layer components {
-  .table {
-    margin-top: 2rem;
+  .table-header {
+    border: 1px solid var(--color-neutral-200);
+    border-block-end-color: transparent;
+    border-radius: 8px 8px 0 0;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+
+    & .left {
+      margin-inline-end: auto;
+    }
+
+    & .title {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      color: var(--color-neutral-800);
+      font-weight: 600;
+      font-size: 18px;
+      margin-block: 0 0.25rem;
+    }
+
+    & .count {
+      display: inline-flex;
+      align-items: center;
+      justify-items: center;
+      font-size: 12px;
+      font-weight: 500;
+      color: var(--color-brand-600);
+      padding: 0.2em 0.75em;
+      border: 1px solid var(--color-brand-200);
+      border-radius: 999px;
+      background-color: var(--color-brand-50);
+    }
+
+    & .description {
+      font-size: 14px;
+      margin: unset;
+    }
+  }
+  
+  .table-content {
     inline-size: 100%;
     font-size: 14px;
     border-inline: 1px solid var(--color-neutral-200);
@@ -106,6 +147,28 @@
       top: 0;
       background-color: var(--color-neutral-50);
       z-index: 1;
+    }
+  }
+
+  .table-pagination {
+    border: 1px solid var(--color-neutral-200);
+    border-block-start-color: transparent;
+    border-radius: 0 0 8px 8px;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    justify-content: space-between;
+
+    & .info {
+      margin-inline-end: auto;
+      font-size: 14px;
+      font-weight: 500;
+    }
+
+    & .input {
+      inline-size: 75px;
+      margin-inline-end: 1.5rem;
     }
   }
 }
