--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -2,6 +2,7 @@
   .button {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     gap: 0.25rem;
     border: 1px solid transparent;
     border-radius: 0.25em;
