--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -19,7 +19,7 @@
       color: var(--color-neutral-800);
       font-weight: 600;
       font-size: 18px;
-      margin-block: 0 0.25rem;
+      margin: unset;
     }
 
     & .count {
