--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -10,57 +10,58 @@
     font-weight: 600;
     font-size: 14px;
     white-space: nowrap;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+    padding-inline: 0.75rem;
+    block-size: 2.25rem;
+    transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 
     & svg {
       opacity: 0.5;
     }
 
-    &.is-rounded {
-      border-radius: 9999px;
+    &:focus-visible {
+      outline: 2px solid var(--color-brand-500);
+      outline-offset: 2px;
     }
 
-    &.is-normal {
-      padding-inline: 2ex;
-      block-size: 2.25rem;
+    &[disabled] {
+      cursor: not-allowed;
     }
 
-    &.is-large {
-      padding-inline: 3ex;
-      block-size: 3rem;
-    }
+    &.-primary {
+      --text-color: var(--color-white);
+      --background-color: var(--color-brand-600);
+      --border-color: var(--color-brand-700);
 
-    &.is-icon-only {
-      padding-inline: unset;
-      aspect-ratio: 1;
-    }
+      &:hover {
+        --background-color: var(--color-brand-700);
+        --border-color: var(--color-brand-800);
+      }
 
-    &.is-primary {
-      color: var(--color-white);
-      box-shadow:
-        0 0 0 1px var(--color-brand-600),
-        0 2px 3px oklch(from var(--color-black) l c h / 0.15);
-      background:
-        linear-gradient(var(--color-brand-600)) padding-box,
-        linear-gradient(to bottom, var(--color-brand-500), var(--color-brand-600)) border-box;
-  
-      &:focus-visible {
-        outline: 2px solid var(--color-brand-500);
-        outline-offset: 2px;
+      &[disabled] {
+        --background-color: var(--color-neutral-100);
+        --border-color: var(--color-neutral-200);
+        --text-color: var(--color-neutral-500);
       }
     }
 
-    &.is-secondary {
-      color: var(--color-neutral-800);
-      box-shadow:
-        0 0 0 1px var(--color-neutral-300),
-        0 2px 3px oklch(from var(--color-black) l c h / 0.075);
-      background:
-        linear-gradient(var(--color-white)) padding-box,
-        linear-gradient(to bottom, var(--color-white), var(--color-neutral-100)) border-box;
+    &.-secondary {
+      --text-color: var(--color-neutral-800);
+      --background-color: var(--color-white);
+      --border-color: var(--color-neutral-300);
 
-      &:focus-visible {
-        outline: 2px solid var(--color-neutral-400);
-        outline-offset: 2px;
+      &:hover {
+        --background-color: var(--color-neutral-50);
+        --border-color: var(--color-neutral-400);
+      }
+
+      &[disabled] {
+        --background-color: var(--color-white);
+        --border-color: var(--color-neutral-200);
+        --text-color: var(--color-neutral-400);
       }
     }
   }
