--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -157,6 +157,7 @@
     align-items: center;
     gap: 0.5rem;
     justify-content: space-between;
+    margin-block-end: 1rem;
 
     & .info {
       margin-inline-end: auto;
